# bits-daemon-legacy

./: bits_service.py  common.py  config.py  database.py  pushserver.py  twitter_listener.py
initscript/: bits-daemon
nativews/: CMakeLists.txt  push_server.cpp  push_server.h  push_server.i  sha1.h  stresstest.sh  test-chrome.html  test-firefox.html  ws.sh
sql/: bits2.sql
